...


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/CreateCocktailFragment_TextInput_CocktailInstructions"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CreateCocktailFragment_TextView_CocktailName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
...


                <Spinner
                    android:id="@+id/CreateCocktailFragment_Spinner_CocktailCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/CreateCocktailFragment_Button_AddCocktail"
               />

                <Button
                    android:id="@+id/CreateCocktailFragment_Button_AddCocktail"
                    style="@style/Screen_Button_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CreateCocktailFragment_Button_AddCocktail"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_CocktailInstructions"
                    layout_constraintTop_toBottomOf="@+id/CreateCocktailFragment_NestedScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/CreateCocktailFragment_TextView_Instructions"
                    android:inputType="textMultiLine"
                    android:textAlignment="viewStart"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/CreateCocktailFragment_TextView_CocktailName">
                    >

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:minHeight="100dp"
                        style="@style/CreateCocktail_LinearLayout"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/CreateCocktailFragment_GuideLine">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount1"
                            android:tag="HoeveelheidIngredient1"
                             />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/CreateCocktailFragment_TextInput_Ingredient1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/CreateRecipeFragment_TextView_Ingredient1"
                          />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateCocktailFragment_TextInput_IngredientAmount2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CreateCocktailFragment_TextInput_IngredientAmount2"
                    android:tag="HoeveelheidIngredient1"
                      />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CreateCocktailFragment_TextInput_Ingredient2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CreateRecipeFragment_TextView_Ingredient2"
                  />

        <com.google.android.material.textfield.TextInputEditText
...
                         
                        tools:layout_conversion_absoluteHeight="45dp"
                        tools:layout_conversion_absoluteWidth="381dp" />


                        <Button
                            android:id="@+id/CreateCocktailFragment_Button_AddIngredient"
                            style="@style/Screen_Button_Style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Fragment_Button_AddIngredient" />


...
