<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="cocktail"
            type="com.example.mycocktails.domain.Cocktail" />
        <variable
            name="clickListener"
            type="com.example.mycocktails.screens.cocktail.CocktailListener" />
    </data>


    <androidx.cardview.widget.CardView
        android:id="@+id/CocktailLayout_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/CocktailLayout_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/CocktailList_LinearLayout"
            >

            <Button
                android:id="@+id/CocktailLayout_Button_CocktailName"
                style="@style/Screen_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> clickListener.onClick(cocktail)}"
                app:cocktailName="@{cocktail}" />

            <ImageButton
                android:id="@+id/CocktailLayout_ImageButton_ArrowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/ArrowToRecipe"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>
