<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mycocktailbackground">

        <TextView
            android:id="@+id/SearchFragment_TextView_SearchTitle"
            style="@style/Screen_Title_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SearchFragment_TextView_SearchTitle"
            app:layout_constraintBottom_toTopOf="@+id/SearchFragment_GuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/SearchFragment_GuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/SearchFragment_GuideLine">

            <ImageButton
                android:id="@+id/SearchFragment_Button_StartSearch"
                style="@style/SearchFragment_SearchImage_Button"
                android:contentDescription="@string/SearchFragment_TextView_SearchTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SearchFragment_TextInput_SearchBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CreateCocktailForm_TextInputField_Searchbar"
 />

        </LinearLayout>

        <TextView
            android:id="@+id/SearchFragment_TextView_CategoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Screen_Title_Style"
            android:text="@string/SearchFragment_TextView_CategoryTitle"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout5"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SearchFragment_RecycleView_CategoryRecycleView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="clip_horizontal|center"
            android:foregroundGravity="center|center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SearchFragment_TextView_CategoryTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <variable
            name="searchViewModel"
            type="com.example.mycocktails.screens.search.SearchViewModel" />
    </data>

</layout>