<resources>
    <string name="app_name">MyCocktails</string>

    <!-- android:text="@string/SearchFragment_Image_Categroy" -->

    <string name="CreateCocktailFragment_TextView_Title">Personal Cocktail</string>
    <string name="Fragment_Button_AddIngredient">Add ingredient</string>
    <string name="CreateCocktailFragment_Button_AddCocktail">Add Cocktail</string>
    <string name="CreateCocktailFragment_TextView_CocktailName">Cocktail name</string>
    <string name="CreateCocktailFragment_TextView_Instructions">Instructions</string>
    <string name="RecipeFragment_TextView_SubTitle_Ingredients">Ingredients</string>
    <string name="RecipeFragment_TextView_SubTitle_Instructions">Instructions</string>
    <string name="SearchFragment_TextView_SearchTitle">Search</string>
    <string name="SearchFragment_TextView_CategoryTitle">Category</string>
    <string name="SearchFragment_Image_Categroy">An image of the cocktail</string>
    <string name="ShoppingFragment_Textview_Title">Shoppinglist</string>
    <string name="ShoppingFragment_Button_AddItem">Add item to shoppinglist</string>
    <string name="ShoppingFragment_Button_ClearList">Clear List</string>
    <string name="NoWifi">No Wifi</string>
...
